# smart_contract_temp_sol

./: .gitignore  README.md
back/: Cargo.toml
back/src/: lib.rs
front/: Cargo.toml
front/src/: main.rs
