[package]
name = "contract1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [features]
# no-entrypoint = []


[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.10.4"


[dev-dependencies]
solana-program-test = "1.10.4"

[lib]
crate-type = ["cdylib", "lib"]
