[package]
name = "store-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-sdk = "1.10.4"
solana-client = "1.10.4"
solana-account-decoder = "1.10.5" 